# PEPFlow

./: .gitignore  GEMINI.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude/commands/: lyap-closed-form.md  lyap-define.md  lyap-vectors.md  pep-full-proof.md
.gemini/: settings.json
.github/workflows/: ci.yml  deploy-docs.yml
docs/: requirements.txt
docs/source/: api_reference.md  conf.py  encyclopedia.md  examples.md  index.md  quickstart.ipynb  tutorial.md
examples/agm/: agm_example.ipynb  agm_example.py
examples/appm/: appm_example.ipynb
examples/bdrs/: bdrs_example.ipynb
examples/bppm/: bppm_example.ipynb
examples/drs/: drs_example.ipynb  drs_example.py
examples/dual-ohm/: dual_ohm_example.ipynb
examples/gd/: gd_example.ipynb  gd_example.py
examples/ogm/: ogm_example.ipynb  ogm_example.py
examples/ogm_g/: ogm_g_example.ipynb  ogm_g_example.py
examples/pgm/: pgm_example.ipynb  (+1 more)
pepflow/: __init__.py  constants.py  constraint.py  dual_interactive_constraint.py  e2e_test.py  expression_manager.py  expression_manager_test.py  function.py  ipython_utils.py  ipython_utils_test.py  lyapunov_utils.py  lyapunov_utils_test.py  math_expression.py  operator.py  operator_test.py  parameter.py  parameter_test.py  pep.py  pep_context.py  pep_context_test.py  pep_result.py  pep_runner.py  pep_test.py  plot_data.py  primal_interactive_constraint.py  registry.py  scalar.py  scalar_test.py  solver.py  solver_test.py  utils.py  vector.py  vector_test.py
scripts/: build_doc.bat  build_doc.sh  build_package.sh  check.bat  check.sh
(+128 files in other folders)
